2006-03-29  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c: (file_parse): do not
        leak lang files fd's.

2006-02-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/eggregex.c: (egg_regex_fetch_named):
        fixed for the case when PCRE_DUPNAMES is used.
	* gtksourceview/gtksourcecontextengine.c: (replace_start_regex):
        use correct arguments to egg_regex_fetch_named().
	* gtksourceview/language-specs/language2.rng,
        gtksourceview/gtksourcelanguage-parser-2.c: (get_regex_flags),
        (update_regex_flags), (expand_regex): new regex option "dupnames",
        which is translated to EGG_REGEX_DUPNAMES.
	* gtksourceview/language-specs/sh.lang: use "dupnames" thing to
        simplify here-doc context.

2006-02-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/eggregex.h,
        gtksourceview/libegg/regex/eggregex.c: new function 
        egg_regex_get_backrefmax().
	* gtksourceview/gtksourcelanguageparser-2.c: (expand_regex):
        do not allow backreferences in highlighting patterns: error
        out and produce a warning instead of silently acceting a pattern
        that will never match.

2006-02-10  Yevgen Muntyan  <muntyan@tamu.edu>

	* tests/testfiles.sh: new file, a script which produces bunch
        of files of different types, to check highlighting.

2006-02-10  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.h: renamed once again
        GtkSourceContextMatchOptions to GtkSourceContextFlags,
        added GTK_SOURCE_CONTEXT_STYLE_INSIDE flag which means context
        style should not be applied to its start and end matches.
	* gtksourceview/gtksourcecontextengine.c:
        (apply_tags), (apply_sub_patterns): use the STYLE_INSIDE flag;
        (idle_worker), (first_update_callback): use gdk_threads_enter/leave
        in idle callbacks;
        (gtk_source_context_engine_attach_buffer): mark whole buffer as