@@ -47,19 +47,20 @@
                     <keyword>using</keyword>
                     <keyword>xor</keyword>
                     <keyword>xor_eq</keyword>
+
+                    <keyword>class</keyword>
+                    <keyword>inline</keyword>
+                    <keyword>namespace</keyword>
+                    <keyword>typename</keyword>
+                    <keyword>template</keyword>
+                    <keyword>virtual</keyword>
                 </context>
 
                 <context id="types" style-ref="c:data-type">
                     <keyword>bool</keyword>
-                    <keyword>class</keyword>
                     <keyword>explicit</keyword>
                     <keyword>export</keyword>
-                    <keyword>inline</keyword>
                     <keyword>mutable</keyword>
-                    <keyword>namespace</keyword>
-                    <keyword>template</keyword>
-                    <keyword>typename</keyword>
-                    <keyword>virtual</keyword>
                     <keyword>wchar_t</keyword>
                 </context>
 
