@@ -21,10 +21,24 @@
   <definitions>
     <define-regex id="variable">[a-zA-Z_][a-zA-Z0-9_]*</define-regex>
 
-    <context id="variable">
+    <context id="variable-1">
       <match>\$\((\%{variable})\)</match>
       <include>
         <context sub-pattern="1" style-ref="variable"/>
+      </include>
+    </context>
+
+    <context id="variable-2">
+      <match>\$\{(\%{variable})\}</match>
+      <include>
+        <context sub-pattern="1" style-ref="variable"/>
+      </include>
+    </context>
+
+    <context id="variable">
+      <include>
+        <context ref="variable-1"/>
+        <context ref="variable-2"/>
       </include>
     </context>
 
